Fix display on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
   height: 100%;
   display: grid;
-  place-content: center;
 }
