--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -1,4 +1,5 @@
 .Game {
+  margin: auto;
   max-width: 700px;
   display: flex;
   flex-direction: column;
