--- a/src/components/Splash.css
+++ b/src/components/Splash.css
@@ -1,4 +1,5 @@
 .Splash {
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
